# ffmpeg-update

./: README.md  pyproject.toml
src/ffmpeg_update/: __init__.py
src/ffup/: cli.py
