[project]
name = "ffmpeg-update"
version = "1.4.0"
readme = "README.md"
authors = [
    { name = "Asadullah Shaikh" }
]
requires-python = ">=3.10"
dependencies = [
    "fire",
    "requests",
    "tqdm",
]

[project.scripts]
ffup = "ffup:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
